Enigma/testing/error/toofewrotors.inp
* B GAMMA I II AAAA (IV)
JIODSJ